changes to css for fixing contrast

--- a/hw7css.css
+++ b/hw7css.css
@@ -14,7 +14,7 @@
 }
 
 h1, h2, h3 {
-  color: skyblue;
+  color: darkred;
   text-align: center;
   font-family: "Sofia", sans-serif;
 }
@@ -40,5 +40,5 @@ ol, ul {
 }
 
 em {
-  color: gray;
+  color: darkblue;
 }
